Padronizando hora para UTC, adicionando UUID em paciente, criando anotação personalizada para exame, e criado alguns DTOs.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,42 @@
 
-#validações de campos de texto
-campo.texto.notBlank.obrigatorio=nao pode ser vazio nem nulo!
-campo.texto.sizeMax=deve ter no maximo em caracteres: 
-campo.texto.sizeMin=deve ter no minimo em caracteres:
-campo.email=Deve ser um email valido (email@email.com)
+#validacoees de campos de texto
+#campo.texto.notBlank.obrigatorio=nao pode ser vazio nem nulo!
+#campo.texto.sizeMax=deve ter no maximo em caracteres:
+#campo.texto.sizeMin=deve ter no minimo em caracteres:
+#campo.email=Deve ser um email valido (email@email.com)
+
+########################################################################################################################
+#{0} pega o nome do atributo
+NotBlank={0} e obrigatorio
+NotNull={0} e obrigatorio
+PositiveOrZero={0} deve ser um valor maior ou igual a zero
+Email={0} deve ser um endereÃ§o de e-mail vÃ¡lido
+Multiplo={0} deve ser um valor multiplo de {1}
+ValorZeroIncluiDescricao={1} deve conter {2}
+typeMismatch.java.time.OffsetDateTime={0} deve ser uma data/hora valida
+typeMismatch.java.lang.Long={0} deve ser um numero valido
+
+ValorExame.invalido={0} esta invalido
+#substitui o full qualified name ou o nome mostrado na stack de erro
+# Paciente
+pacienteED.nome=Nome do paciente
+pacienteED.id=Codigo do paciente
+
+# Exame
+NotNull.exame.valor={0} e obrigatorio
+NotNull.exame.paciente={0} e obrigatorio
+exameED.nomeExame=Nome do exame
+exameED.paciente=paciente do exame
+exameED.valor=Valor do exame
+
+# Atendente
+atendenteED.nome=Nome da(o) Atendente
+atendenteED.id=Codigo da(o) Atendente
+
+# Medico
+medicoED.nome=Nome do medico
+medicoED.id=Estado do medico
+
+# Local
+localED.nomeLocal=Nome do local
+localED.id=Codigo do local
