Consultas aceitando parâmeros, classes de filro para as requests e relatórios com jasper

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,3 +40,12 @@ medicoED.id=Estado do medico
 # Local
 localED.nomeLocal=Nome do local
 localED.id=Codigo do local
+
+# ExameFilter
+exameFilter.dataExame=Data do pedido
+exameFilter.nomeExame=Nome do local
+exameFilter.valor=Valor do exame
+exameFilter.pacienteId=Codigo do paciente
+exameFilter.medicoId=Codigo do medico
+exameFilter.localId=Codigo do local
+exameFilter.atendenteId=Codigo da atendente
